--- a/src/main/webapp/app/pages/control-panel/user-management/user-form.html
+++ b/src/main/webapp/app/pages/control-panel/user-management/user-form.html
@@ -1,43 +1,50 @@
 <div style="direction: rtl">
     <ba-card title="فرم اطلاعات کاربر">
         <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
-
             <div class="form-group row">
                 <label class="col-sm-2 form-control-label">نام</label>
                 <div class="col-sm-10">
-                    <input type="text"
-                           class="form-control"
-                           placeholder="نام"
-                           formControlName="firstName">
-                    <div *ngIf="validationService.isFieldInvalid('firstName')"
-                         class="alert alert-danger">
-                        <div [innerHTML]="validationService.getMessage('firstName')"></div>
+                    <div [ngClass]="validationService.getInputClass('firstName')">
+                        <input aria-describedby="firstNameStatus"
+                               type="text"
+                               class="form-control"
+                               placeholder="نام"
+                               formControlName="firstName">
+                        <i aria-hidden="true" [ngClass]="validationService.getInputIcon('firstName')"></i>
+                        <span class="sr-only" id="firstNameStatus">(error)</span>
                     </div>
                 </div>
+                <!--<div *ngIf="validationService.isFieldInvalid('firstName')"
+                     class="alert alert-danger">
+                    <div [innerHTML]="validationService.getMessage('firstName')"></div>
+                </div>-->
             </div>
-
 
             <div class="form-group row">
                 <label class="col-sm-2 form-control-label">نام خانوادگی</label>
                 <div class="col-sm-10">
-                    <input type="text"
-                           class="form-control"
-                           placeholder="نام خانوادگی"
-                           formControlName="lastName">
-                    <div *ngIf="validationService.isFieldInvalid('lastName')" class="alert alert-danger">
-                        <div [innerHTML]="validationService.getMessage('lastName')"></div>
+                    <div [ngClass]="validationService.getInputClass('lastName')">
+                        <input aria-describedby="lastNameStatus"
+                               type="text"
+                               class="form-control"
+                               placeholder="نام خانوادگی"
+                               formControlName="lastName">
+                        <i aria-hidden="true" [ngClass]="validationService.getInputIcon('lastName')"></i>
+                        <span class="sr-only" id="lastNameStatus">(error)</span>
                     </div>
                 </div>
             </div>
             <div class="form-group row">
                 <label class="col-sm-2 form-control-label">نام کاربری</label>
                 <div class="col-sm-10">
-                    <input type="text"
-                           class="form-control"
-                           placeholder="نام کاربری"
-                           formControlName="login">
-                    <div *ngIf="validationService.isFieldInvalid('login')" class="alert alert-danger">
-                        <div [innerHTML]="validationService.getMessage('login')"></div>
+                    <div [ngClass]="validationService.getInputClass('login')">
+                        <input aria-describedby="loginStatus"
+                               type="text"
+                               class="form-control"
+                               placeholder="نام کاربری"
+                               formControlName="login">
+                        <i aria-hidden="true" [ngClass]="validationService.getInputIcon('login')"></i>
+                        <span class="sr-only" id="loginStatus">(error)</span>
                     </div>
                 </div>
             </div>
@@ -45,12 +52,14 @@
             <div class="form-group row">
                 <label class="col-sm-2 form-control-label">رمز عبور</label>
                 <div class="col-sm-10">
-                    <input type="password"
-                           class="form-control"
-                           placeholder="رمز عبور"
-                           formControlName="password">
-                    <div *ngIf="validationService.isFieldInvalid('password')" class="alert alert-danger">
-                        <div [innerHTML]="validationService.getMessage('password')"></div>
+                    <div [ngClass]="validationService.getInputClass('password')">
+                        <input aria-describedby="passwordStatus"
+                               type="text"
+                               class="form-control"
+                               placeholder="رمز عبور"
+                               formControlName="password">
+                        <i aria-hidden="true" [ngClass]="validationService.getInputIcon('password')"></i>
+                        <span class="sr-only" id="passwordStatus">(error)</span>
                     </div>
                 </div>
             </div>
@@ -58,12 +67,14 @@
             <div class="form-group row">
                 <label class="col-sm-2 form-control-label">تکرار رمز عبور</label>
                 <div class="col-sm-10">
-                    <input type="password"
-                           class="form-control"
-                           placeholder="تکرار رمز عبور"
-                           formControlName="passwordRepeat">
-                    <div *ngIf="validationService.isFieldInvalid('passwordRepeat')" class="alert alert-danger">
-                        <div [innerHTML]="validationService.getMessage('passwordRepeat')"></div>
+                    <div [ngClass]="validationService.getInputClass('passwordRepeat')">
+                        <input aria-describedby="passwordRepeatStatus"
+                               type="text"
+                               class="form-control"
+                               placeholder="تکرار رمز عبور"
+                               formControlName="passwordRepeat">
+                        <i aria-hidden="true" [ngClass]="validationService.getInputIcon('passwordRepeat')"></i>
+                        <span class="sr-only" id="passwordRepeatStatus">(error)</span>
                     </div>
                 </div>
             </div>
@@ -71,12 +82,14 @@
             <div class="form-group row">
                 <label class="col-sm-2 form-control-label">پست الکترونیکی</label>
                 <div class="col-sm-10">
-                    <input type="email"
-                           class="form-control"
-                           placeholder="پست الکترونیکی"
-                           formControlName="email">
-                    <div *ngIf="validationService.isFieldInvalid('email')" class="alert alert-danger">
-                        <div [innerHTML]="validationService.getMessage('email')"></div>
+                    <div [ngClass]="validationService.getInputClass('email')">
+                        <input aria-describedby="emailStatus"
+                               type="text"
+                               class="form-control"
+                               placeholder="پست الکترونیکی"
+                               formControlName="email">
+                        <i aria-hidden="true" [ngClass]="validationService.getInputIcon('email')"></i>
+                        <span class="sr-only" id="emailStatus">(error)</span>
                     </div>
                 </div>
             </div>
@@ -84,7 +97,9 @@
 
             <div class="form-group row">
                 <div class="offset-sm-2 col-sm-10">
-                    <button type="submit" class="btn btn-warning">ثبت نام</button>
+                    <button type="submit" [disabled]="!validationService.isValid()"
+                            class="btn btn-success">ثبت نام
+                    </button>
                 </div>
             </div>
 
