fix validation in add user load edit form

--- a/src/main/webapp/app/pages/control-panel/user-management/user-management.html
+++ b/src/main/webapp/app/pages/control-panel/user-management/user-management.html
@@ -16,8 +16,7 @@
                     <div class="col-md-12">
                         <fw-grid-view [config]="userGridConfig"
                                       [crudService]="service"
-                                      [filter]="searchFilter"
-                                      (eventHandler)="onGridEvent($event)"></fw-grid-view>
+                                      [filter]="searchFilter"></fw-grid-view>
                     </div>
                 </div>
             </ba-card>
