--- a/src/main/webapp/app/pages/control-panel/user-management/update-user.html
+++ b/src/main/webapp/app/pages/control-panel/user-management/update-user.html
@@ -1,11 +1,8 @@
 <div style="direction: rtl">
 
-
     <div class="animated fadeIn card" zoom-in>
         <div class="card-header clearfix">
-            <button class="btn btn-default pull-left"
-                    (click)="cancel()"
-                    type="button">
+            <button class="btn btn-default pull-left" (click)="cancel()" type="button">
                 بازگشت
                 <i class="fa fa-arrow-left"></i>
             </button>
@@ -72,42 +69,6 @@
                 </div>
 
                 <div class="form-group row">
-                    <label class="col-sm-2 form-control-label">رمز عبور</label>
-                    <div class="col-sm-10">
-                        <div [ngClass]="validationService.getInputClass('password')">
-                            <input aria-describedby="passwordStatus"
-                                   type="text"
-                                   class="form-control"
-                                   placeholder="رمز عبور"
-                                   formControlName="password"
-                                   data-toggle="tooltip"
-                                   data-placement="bottom"
-                                   title="{{validationService.getMessage('password')}}">
-                            <i aria-hidden="true" [ngClass]="validationService.getInputIcon('password')"></i>
-                            <span class="sr-only" id="passwordStatus">(error)</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    <label class="col-sm-2 form-control-label">تکرار رمز عبور</label>
-                    <div class="col-sm-10">
-                        <div [ngClass]="validationService.getInputClass('passwordRepeat')">
-                            <input aria-describedby="passwordRepeatStatus"
-                                   type="text"
-                                   class="form-control"
-                                   placeholder="تکرار رمز عبور"
-                                   formControlName="passwordRepeat"
-                                   data-toggle="tooltip"
-                                   data-placement="bottom"
-                                   title="{{validationService.getMessage('passwordRepeat')}}">
-                            <i aria-hidden="true" [ngClass]="validationService.getInputIcon('passwordRepeat')"></i>
-                            <span class="sr-only" id="passwordRepeatStatus">(error)</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="form-group row">
                     <label class="col-sm-2 form-control-label">پست الکترونیکی</label>
                     <div class="col-sm-10">
                         <div [ngClass]="validationService.getInputClass('email')">
@@ -130,7 +91,7 @@
                     <div class="offset-sm-2 col-sm-10">
                         <button type="submit"
                                 [disabled]="!validationService.isValid()"
-                                class="btn btn-success">ثبت نام
+                                class="btn btn-success">به روز رسانی
                         </button>
                     </div>
                 </div>
